# 2024-2-Gestao-Labs-DCOMP

./: README.md
backend/: .env  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/database/: enums.py  models.py  utils.py
backend/app/routes/: alteracoes.py  computadores.py  laboratorios.py  login.py  relato_problemas.py  status.py  usuarios.py
backend/app/services/: usuarios.py
backend/tests/: conftest.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/screens/auth/: auth.dart  login.dart  password_reset.dart  perfil_usuario.dart
frontend/lib/screens/computadores/: computador_detalhes.dart  computador_manutencao.dart  listar_computadores.dart
frontend/lib/screens/home/: home.dart
frontend/lib/utils/: api_service.dart  file_utils.dart  formatters.dart  mensagem_dialogs.dart  style.dart  token_storage.dart  utils.dart  validators.dart
frontend/lib/widgets/: app_bar.dart  bottom_bar.dart  key_value.dart  no_results.dart
frontend/lib/widgets/menu/: escape_button_menu.dart  floating_menu_button.dart  menu_drawer.dart  menu_item.dart
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
